# django

./: db.sqlite3  pyproject.toml
boards/: admin.py  models.py  serializers.py  urls.py  views.py
boards/migrations/: 0001_initial.py  0002_board_created_board_updated.py  0003_board_users.py
boards/templates/: all_boards.html  reviews.html
chattings/: admin.py  models.py
chattings/migrations/: 0001_initial.py
common/: models.py
config/: settings.py  urls.py
reviews/: models.py  views.py
reviews/migrations/: 0001_initial.py  0002_remove_review_write_date_remove_review_writer.py  0003_review_board_review_user.py
users/: admin.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
